spec-determinism/vstd-survey/experiments/alias-new-2026-07-21/artifacts/std_specs__vec__vec_index__L53/verus_stderr.txt
error[E0405]: cannot find trait `Allocator` in this scope
  --> vstd-survey/experiments/alias-new-2026-07-21/artifacts/std_specs__vec__vec_index__L53/harness.rs:14:30
   |
14 | proof fn det_vec_index<T, A: Allocator>(g_vec_leneq: bool, k_vec_leneq: nat, g_vec_lenrng: bool, k_vec_lenrng_lo: nat, k_vec_lenrng_...
   |                              ^^^^^^^^^ not found in this scope
   |
help: consider importing one of these traits
   |
 3 + use std::alloc::Allocator;
   |
 3 + use alloc::alloc::Allocator;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0405`.
